# tensorflow_musa_extension

./: CMakeLists.txt  build.sh  setup.py
.github/workflows/: pr-validation.yml
musa_ext/graph/fusion/: RGProjection_fusion.cc  clip_fusion.cc  concat_matmul_fusion.cc  fuselayernormv2_fusion.cc  fusion_pattern_manager.h  gelu_fusion.cc  layernorm_fusion.cc  linear_activation_fusion.cc  matmul_biasadd_fusion.cc  normalize_fusion.cc  prelu_fusion.cc  reshape_matmul_fusion.cc  shifted_affine_map_fusion.cc  sigmoid_calibration_fusion.cc  tensordot_bias_fusion.cc  tensordot_fusion.cc  tokenmixer_fusion.cc
musa_ext/kernels/array/: musa_concat_op.cc  musa_const_op.cc  musa_empty_tensor_list.cc  musa_fill_functor.h  musa_fill_op.cc  musa_gather_kernel.mu  musa_identity_op.cc  musa_pack_op.cc  musa_reshape_op.cc  musa_resourcegather_op.cc  musa_strided_slice_grad_op.cc  musa_strided_slice_op.cc  musa_tensorinteraction_op.cc  musa_tensorlist_fromtensor_op.cc  musa_tensorlist_reserve_op.cc  musa_tile_op.cc  musa_transpose_functor.h  musa_where_op.h
musa_ext/kernels/fusion/: musa_clip_op.cc  musa_gelu_grad_kernel.mu  musa_gelu_op.cc  musa_layernorm_op.cc  musa_matmul_bias_op.cc  musa_normalize_fusion_op.cc  musa_prelu_fusion_op.cc  musa_reshape_matmul_op.cc  musa_rgprojection_fusion_op.cc  musa_shifted_affine_map_op.cc  musa_tensordot_bias_op.cc  musa_tensordot_op.cc  musa_tokenmixer_op.cc
musa_ext/kernels/math/: musa_Maxpool_op.cc  musa_add_op.cc  musa_addn_kernel.mu  musa_addn_op.cc  musa_cast_functor.h  musa_cast_op.cc  musa_compare_kernel.mu  musa_conv2d_backward_op.cc  musa_conv2d_op.cc  musa_div_no_nan_op.cc  musa_div_no_nan_op.mu  musa_einsum_op.cc  musa_equal_op.cc  musa_logical_or_op.cc  musa_matmul_op.cc  musa_reduce_functor.h
musa_ext/kernels/nn/: musa_attention_forward_kernel.mu  musa_attention_forward_op.cc  musa_attention_grad_kernel.mu  musa_attention_grad_op.cc  musa_dropout_mask_kernel.mu  musa_dropout_op.cc  musa_rmsnorm_kernel.mu  musa_rmsnorm_op.cc  musa_softmax_grad_kernel.mu  musa_softmax_grad_op.cc  musa_softmax_op.cc  musa_softmax_small_lastdim_kernel.mu
musa_ext/kernels/random/: musa_random_kernels.mu  musa_random_op.cc  musa_random_ops.cc
musa_ext/kernels/state/: musa_resource_variable_kernel.mu  musa_resource_variable_op.cc  musa_variable_v2_op.cc
musa_ext/kernels/training/: musa_apply_sparse_adam_op.cc  musa_applyadagrad_op.cc  musa_applyadam_op.cc  musa_applyadamax_op.cc  musa_applygradientdescent_kernel.mu  musa_applygradientdescent_op.cc  musa_applyrmsprop_op.cc
musa_ext/mu/: device_register.cc
musa_ext/mu/device/: musa_device.cc  musa_device.h  musa_event.h  musa_event_mgr.cc  musa_executor.h  musa_platform.cc  musa_stream.h
musa_ext/mu/optimizer/: graph_utils.cc  graph_utils.h  musa_graph_optimizer.cc
musa_ext/utils/: musa_einsum_op_util.h
