cmake_minimum_required(VERSION 3.10)
project(musa_plugin)

# Force GCC compiler to align with TF core library ABI
set(CMAKE_C_COMPILER gcc)
set(CMAKE_CXX_COMPILER g++)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Set MUSA path
set(MUSA_PATH "/usr/local/musa" CACHE STRING "Path to MUSA installation")
set(MCC_EXECUTABLE "${MUSA_PATH}/bin/mcc")

# Validate MUSA path exists
if(NOT EXISTS "${MUSA_PATH}")
    message(FATAL_ERROR "MUSA_PATH '${MUSA_PATH}' does not exist. Please set correct MUSA installation path.")
endif()

find_library(MUDNNCXX_LIBRARY NAMES mudnncxx PATHS "${MUSA_PATH}/lib" "${MUSA_PATH}/lib64" NO_DEFAULT_PATH)
find_library(MUDNN_LIBRARY NAMES mudnn PATHS "${MUSA_PATH}/lib" "${MUSA_PATH}/lib64" NO_DEFAULT_PATH)

if(MUDNNCXX_LIBRARY)
    set(MUSA_DNN_LIBRARY "${MUDNNCXX_LIBRARY}")
elseif(MUDNN_LIBRARY)
    set(MUSA_DNN_LIBRARY "${MUDNN_LIBRARY}")
else()
    message(FATAL_ERROR "Failed to find mudnncxx or mudnn under '${MUSA_PATH}/lib' or '${MUSA_PATH}/lib64'.")
endif()

# Get TensorFlow parameters
execute_process(COMMAND python3 -c "import tensorflow as tf; print(tf.sysconfig.get_include())"
    OUTPUT_VARIABLE TF_INC OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND python3 -c "import tensorflow as tf; print(' '.join(tf.sysconfig.get_compile_flags()))"
    OUTPUT_VARIABLE TF_COMPILE_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND python3 -c "import tensorflow as tf; print(' '.join(tf.sysconfig.get_link_flags()))"
    OUTPUT_VARIABLE TF_LINK_FLAGS OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND python3 -c "import tensorflow as tf; import os; print(os.path.dirname(tf.__file__))"
    OUTPUT_VARIABLE TF_LIB_DIR OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND python3 -c "import sysconfig; print(sysconfig.get_path('include') or '')"
    OUTPUT_VARIABLE PYTHON_INCLUDE OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND python3 -c "import sysconfig; print(sysconfig.get_config_var('EXT_SUFFIX') or '.so')"
    OUTPUT_VARIABLE PYTHON_EXTENSION_SUFFIX OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(
    COMMAND python3 -c "import pybind11; print(pybind11.get_include())"
    OUTPUT_VARIABLE PYBIND11_INCLUDE OUTPUT_STRIP_TRAILING_WHITESPACE
    ERROR_QUIET
    RESULT_VARIABLE PYBIND11_RESULT)

# Validate TensorFlow is available
if(NOT TF_INC)
    message(FATAL_ERROR "Failed to get TensorFlow include path. Please ensure TensorFlow is installed.")
endif()
if(NOT PYTHON_INCLUDE)
    message(FATAL_ERROR "Failed to get Python include path.")
endif()
set(PYBIND11_CANDIDATE_INCLUDES
    "${PYBIND11_INCLUDE}"
    "${TF_INC}/external/pybind11/include"
    "${TF_INC}/external/pybind11/_virtual_includes/pybind11"
    "${TF_INC}/external/pybind11"
)
set(PYBIND11_INCLUDE "")
foreach(candidate_include ${PYBIND11_CANDIDATE_INCLUDES})
    if(EXISTS "${candidate_include}/pybind11/pybind11.h")
        set(PYBIND11_INCLUDE "${candidate_include}")
        break()
    endif()
endforeach()
if(NOT EXISTS "${PYBIND11_INCLUDE}/pybind11/pybind11.h")
    message(FATAL_ERROR "Failed to find pybind11 headers. Please install pybind11 or use a TensorFlow package that includes pybind11 headers.")
endif()

# Clean ABI conflicts in TF_COMPILE_FLAGS
string(REPLACE "-D_GLIBCXX_USE_CXX11_ABI=0" "" TF_COMPILE_FLAGS "${TF_COMPILE_FLAGS}")
string(REPLACE "-D_GLIBCXX_USE_CXX11_ABI=1" "" TF_COMPILE_FLAGS "${TF_COMPILE_FLAGS}")
# Re-add the ABI used by the TensorFlow 2.15 pip wheel
set(TF_COMPILE_FLAGS "${TF_COMPILE_FLAGS} -D_GLIBCXX_USE_CXX11_ABI=1")

# Configure debug/logging-related compile definitions.
#
# Important: this plugin links against the pip TensorFlow wheel, which is built
# in release mode. Some TensorFlow headers (for example refcount.h) contain
# inline DCHECK-dependent side effects. If the plugin is compiled without
# NDEBUG while libtensorflow_framework is compiled with NDEBUG, the plugin and
# framework can disagree on RefCounted teardown semantics and trigger false
# refcount aborts during session/resource destruction.
#
# Keep NDEBUG enabled in every build to match the TensorFlow wheel.
set(TF_COMPILE_FLAGS "${TF_COMPILE_FLAGS} -DMUSA_DISABLE_DEBUG_LOGGING -DNDEBUG -DMUSA_DISABLE_TRACE_LOGGING -DMUSA_DISABLE_AUTO_TRACE")

# Include paths
include_directories("${TF_INC}" "${MUSA_PATH}/include")
if(EXISTS "${MUSA_PATH}/include/mudnncxx")
    include_directories("${MUSA_PATH}/include/mudnncxx")
endif()

# Include TensorFlow C++ core headers for common_runtime
# These are required for accessing BFCAllocator and device-specific headers
include_directories("${TF_INC}/tensorflow/core/common_runtime")
include_directories("${TF_INC}/tensorflow/core/common_runtime/device")

# TensorFlow pip headers may place farmhash in different external include layouts.
# fingerprint.h includes <farmhash.h>, so add whichever location exists.
set(TF_FARMHASH_INC_SRC "${TF_INC}/external/farmhash_archive/src")
set(TF_FARMHASH_INC_VIRTUAL "${TF_INC}/external/farmhash_archive/_virtual_includes/farmhash")
if(EXISTS "${TF_FARMHASH_INC_SRC}/farmhash.h")
    include_directories("${TF_FARMHASH_INC_SRC}")
endif()
if(EXISTS "${TF_FARMHASH_INC_VIRTUAL}/farmhash.h")
    include_directories("${TF_FARMHASH_INC_VIRTUAL}")
endif()

# Define source root directory
set(SRC_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/musa_ext")
set(GRAPH_ROOT "${SRC_ROOT}/graph")
set(GRAPH_FUSION_ROOT "${GRAPH_ROOT}/fusion")
set(KERNELS_ROOT "${SRC_ROOT}/kernels")
set(FUSION_ROOT "${KERNELS_ROOT}/fusion")
include_directories(
    "${SRC_ROOT}"
    "${SRC_ROOT}/mu"
    "${GRAPH_ROOT}"
    "${GRAPH_FUSION_ROOT}"
    "${KERNELS_ROOT}"
    "${FUSION_ROOT}"
)

# Validate source directory exists
if(NOT EXISTS "${SRC_ROOT}")
    message(FATAL_ERROR "Source directory '${SRC_ROOT}' does not exist.")
endif()
if(NOT EXISTS "${GRAPH_FUSION_ROOT}")
    message(FATAL_ERROR "Graph fusion rule directory '${GRAPH_FUSION_ROOT}' does not exist.")
endif()
if(NOT EXISTS "${FUSION_ROOT}")
    message(FATAL_ERROR "Kernel fusion implementation directory '${FUSION_ROOT}' does not exist.")
endif()

# Link paths
link_directories("${MUSA_PATH}/lib" "${MUSA_PATH}/lib64" "${TF_LIB_DIR}")

# Automatically collect source files
file(GLOB_RECURSE CPP_SOURCES
    "${SRC_ROOT}/*.cc"
    "${SRC_ROOT}/mu/*.cc"
    "${KERNELS_ROOT}/*.cc"
)

# filter out disabled kernels (if any)
# list(FILTER CPP_SOURCES EXCLUDE REGEX ".*test.*|.*disabled.*")
# Automatically collect MUSA Kernel files
file(GLOB_RECURSE MU_SOURCES "${KERNELS_ROOT}/*.mu")

# TensorFlow headers pulled into `.mu` compilation require C++17, and mcc's
# aarch64 host predefines can incorrectly trigger NEON-only host headers.
set(MCC_COMMON_FLAGS
    -O3
    -fPIC
    -std=c++17
    -DEIGEN_DONT_VECTORIZE
    -U__ARM_NEON
    -U__ARM_NEON__
    -I${MUSA_PATH}/include
    -I${TF_INC}
)

# MCC compile MUSA Kernel
set(MU_OBJECTS "")
foreach(mu_file ${MU_SOURCES})
    get_filename_component(filename ${mu_file} NAME)
    if(NOT filename MATCHES "^disabled_")
        file(RELATIVE_PATH mu_rel_path "${KERNELS_ROOT}" "${mu_file}")
        string(REPLACE "/" "_" mu_rel_obj "${mu_rel_path}")
        string(REPLACE ".mu" "" mu_rel_obj "${mu_rel_obj}")
        set(obj_file "${CMAKE_CURRENT_BINARY_DIR}/${mu_rel_obj}.mu.o")
        set(mu_full_path "${mu_file}")

        add_custom_command(
            OUTPUT ${obj_file}
            COMMAND ${MCC_EXECUTABLE} -c ${mu_full_path} -o ${obj_file} ${MCC_COMMON_FLAGS}
            DEPENDS ${mu_full_path}
            COMMENT "Compiling MUSA kernel: ${filename}"
        )
        list(APPEND MU_OBJECTS ${obj_file})
    endif()
endforeach()

# Generate plugin library
add_library(musa_plugin SHARED ${CPP_SOURCES} ${MU_OBJECTS})

# Apply TF compile flags (ensure strict ABI consistency)
set_target_properties(musa_plugin PROPERTIES COMPILE_FLAGS "${TF_COMPILE_FLAGS}")

# Set RPATH to ensure runtime library search
set_target_properties(musa_plugin PROPERTIES
    SKIP_BUILD_RPATH FALSE
    BUILD_WITH_INSTALL_RPATH TRUE
    INSTALL_RPATH "${TF_LIB_DIR};${MUSA_PATH}/lib;${MUSA_PATH}/lib64"
)

# Link
target_link_libraries(musa_plugin PRIVATE ${TF_LINK_FLAGS} musa mublas ${MUSA_DNN_LIBRARY} rt)

# Generate Python runtime configuration bindings.
add_library(_runtime_config_bindings MODULE
    "${CMAKE_CURRENT_SOURCE_DIR}/python/_runtime_config_bindings.cc"
)
add_dependencies(_runtime_config_bindings musa_plugin)
target_include_directories(_runtime_config_bindings PRIVATE
    "${PYTHON_INCLUDE}"
    "${PYBIND11_INCLUDE}"
    "${SRC_ROOT}"
)
set_target_properties(_runtime_config_bindings PROPERTIES
    PREFIX ""
    SUFFIX "${PYTHON_EXTENSION_SUFFIX}"
    COMPILE_FLAGS "${TF_COMPILE_FLAGS}"
    LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
    SKIP_BUILD_RPATH FALSE
    BUILD_WITH_INSTALL_RPATH TRUE
    INSTALL_RPATH "$ORIGIN;${TF_LIB_DIR};${MUSA_PATH}/lib;${MUSA_PATH}/lib64"
)
target_link_libraries(_runtime_config_bindings PRIVATE musa_plugin)

# Output configuration
set_target_properties(musa_plugin PROPERTIES
    PREFIX "lib"
    SUFFIX ".so"
    OUTPUT_NAME "musa_plugin"
)

# Build completion message
add_custom_command(TARGET musa_plugin POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E echo "Build completed successfully!"
    COMMENT "Plugin is located at: $<TARGET_FILE:musa_plugin>"
)

# Print build summary
list(LENGTH CPP_SOURCES CPP_SOURCES_COUNT)
list(LENGTH MU_SOURCES MU_SOURCES_COUNT)

message(STATUS "TensorFlow MUSA Plugin Configuration:")
message(STATUS "  MUSA Path: ${MUSA_PATH}")
message(STATUS "  MuDNN Library: ${MUSA_DNN_LIBRARY}")
message(STATUS "  TensorFlow Include: ${TF_INC}")
message(STATUS "  Source Files: ${CPP_SOURCES_COUNT} C++ files, ${MU_SOURCES_COUNT} MUSA kernels")
message(STATUS "  Output: ${CMAKE_CURRENT_BINARY_DIR}/libmusa_plugin.so")
